Метаданные + самостоятельная
