# src/serializers/CourseSerializer.ts
@@ -1,0 +1,7 @@
+import type { PageMeta, Course } from '../types/handlers/types.gen.ts'
+
+export default class CourseSerializer {
+    static index(courses: Course[], meta: PageMeta) {
+        return { data: courses, meta }
+    }
+}
