# src/serializers/LessonSerializer.ts
@@ -1,0 +1,7 @@
+import type { PageMeta, Lesson } from '../types/handlers/types.gen.ts'
+
+export default class LessonSerializer {
+    static index(lessons: Lesson[], meta: PageMeta) {
+        return { data: lessons, meta }
+    }
+}
